* #811 : License change, from MIT License to Apache License 2.0
* #810 : Better lifecycle management framework
* #777 : Change Google's client ID