@@ -2615,6 +2615,9 @@
   "infra.doc.dc_options.msg_doc.header_default": "Default",
   "infra.doc.dc_options.msg_doc.header_description": "Description",
   "infra.doc.dc_options.msg_doc.header_option": "Option",
+  "infra.doc.dc_readme.announcements.announce_item": "* [#{{.Number}} {{.Title}}]({{.Url}})",
+  "infra.doc.dc_readme.announcements.no_announcements": "No announcements are available at the time of release. See [announcement page](https://github.com/watermint/toolbox/discussions/categories/announcements) for the latest announcements.",
+  "infra.doc.dc_readme.announcements.section_title": "Announcements",
   "infra.doc.dc_readme.command.command_header": "Commands",
   "infra.doc.dc_readme.command.services.deepl": "DeepL",
   "infra.doc.dc_readme.command.services.dropbox": "Dropbox (Individual account)",
@@ -3081,6 +3084,11 @@
   "recipe.dev.placeholder.pathchange.title": "Placeholder command for path change document generation",
   "recipe.dev.placeholder.prune.title": "Placeholder of prune workflow messages",
   "recipe.dev.placeholder.title": "Placeholder sentry commands",
+  "recipe.dev.release.announcement.flag.category_id": "Announcement category ID",
+  "recipe.dev.release.announcement.flag.owner": "Repository owner",
+  "recipe.dev.release.announcement.flag.peer": "Account alias",
+  "recipe.dev.release.announcement.flag.repository": "Repository name",
+  "recipe.dev.release.announcement.title": "Update announcements",
   "recipe.dev.release.asset.cli.args": "-owner REPOSITORY_OWNER -repo REPOSITORY_NAME -branch BRANCH -path URL_FILE_PATH -text TEXT_CONTENT -message COMMIT_MESSAGE",
   "recipe.dev.release.asset.flag.branch": "Branch name",
   "recipe.dev.release.asset.flag.message": "Commit message",
